# hackathon-evulotion

./: .gitignore  CLAUDE.md  PHASE4-README.md  PHASE5-COMPLETION.md  README.md  docker-compose.yml  vercel.json
.claude/: settings.local.json
.spec-kit/: config.yaml
.specify/auth/: AUTH-SPEC.md  README.md  auth-agent.md  auth-agent.ps1
api/: index.py  requirements.txt
backend/: CLAUDE.md  Dockerfile  Dockerfile.spaces  app.py  app.yml  main.py  pyproject.toml  requirements.txt  space.py
backend/agents/: todo_agent.py
backend/agents/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/api/: auth.py  chat.py  todos.py  users.py
backend/core/: config.py  security.py
backend/dapr/: integration.py
backend/database/: session.py
backend/kafka/: producer.py
backend/mcp/: protocol.py  server.py
backend/models/: conversation.py  message.py  todo.py  user.py
backend/schemas/: todo.py
frontend/: CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  start-frontend.bat
phase1/: README.md  pyproject.toml
phase1/src/: __init__.py  main.py
phase1/src/cli/: __init__.py  commands.py
phase1/src/domain/: __init__.py  repository.py  todo.py
phase1/src/infrastructure/: __init__.py  in_memory_repository.py
phase1/src/use_cases/: __init__.py  add_todo.py  complete_todo.py  delete_todo.py  list_todos.py  update_todo.py
scripts/: deploy-vercel.sh
specs/: architecture.md  overview.md
terraform/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  setup.sh  variables.tf
(+91 files in other folders)
