[project]
name = "todo-cli"
version = "0.1.0"
description = "Console Todo Application - Phase I"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "todo_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_cli"]

[tool.uv]
dev-dependencies = []